# apm-tutorial-python

./: CONTRIBUTING.md  LICENSE  LICENSE-3rdparty.csv  LICENSE.BSD3  NOTICE  README.md  pyproject.toml  requirements.txt
calendar_app/: app.py
docker/containers/exercise/: Dockerfile.calendar  Dockerfile.notes  docker-compose.yaml
docker/containers/solution/: Dockerfile.calendar  Dockerfile.notes  docker-compose.yaml
docker/host-and-containers/exercise/: docker-compose.yaml
docker/host-and-containers/solution/: Dockerfile.notes  docker-compose.yaml
docker/kubernetes/exercise/: dockerfile.calendar  dockerfile.notes
docker/kubernetes/solution/: dockerfile.calendar  dockerfile.notes
kubernetes/eks/: calendar-app.yaml  datadog-values.yaml  notes-app.yaml
kubernetes/gke/: calendar-app.yaml  datadog-values.yaml  notes-app.yaml  postgres.yaml
notes_app/: app.py  note.py  notes_helper.py  notes_logic.py
notes_app/database/: db_helper.py  postgres_connection.py  sqllite_connection.py
