[tool.poetry]
name = "apm-tutorial-python-host"
version = "0.1.0"
description = "A simple python program for a tutorial demonstrating how to enable Datadog APM tracing for an application."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "2.2.2"
requests = "^2.28.1"
ddtrace = "1.3.4"
psycopg2-binary = "^2.9.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
